<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.GasEtaActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_titulo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:text="@string/app_gas_eta"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_margin="24dp"
                android:src="@mipmap/ic_launcher_round" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edit_gasolina"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="32dp"
                    android:layout_weight="1"
                    android:autofillHints="phone"
                    android:hint="@string/litro_gasolina"
                    android:inputType="numberDecimal" />

                <EditText
                    android:id="@+id/edit_etanol"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="32dp"
                    android:layout_weight="1"
                    android:autofillHints="phone"
                    android:hint="@string/litro_etanol"
                    android:inputType="numberDecimal" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_calcule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:text="@string/calcular"
                android:textSize="24sp" />


            <TextView
                android:id="@+id/text_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:text="@string/resultado"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_clear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:text="@string/limpar"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/salvar"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_done"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/finalizar"
                android:textSize="24sp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>